--- a/client/src/Registration/Registration.module.css
+++ b/client/src/Registration/Registration.module.css
@@ -76,21 +76,65 @@
                     font-size: 30px;    
                 }
             }
-            input {
-                width: 300px;
-                height: 25px;
-                border-radius: 8px;
-                border: none;
-                margin-top: 20px;
-                padding: 10px 10px 10px 20px;
-                font-size: 20px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                color: var(--Elements);
+            form {
+                width: 100%;
+                height: 100vh;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
 
-                @media screen and (max-width: 1065px){
-                    width: 200px;
-                    height: 15px;  
-                    font-size: 15px;
+                @media screen and (max-width: 820px) {
+                    height: 50vh;
+                }
+                .inputDiv {
+                    width: 350px;
+                    height: 80px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: stretch;
+                    justify-content: flex-end;
+
+                    @media screen and (max-width: 1065px){
+                        width: 220px;
+                        height: 60px;   
+                    }
+                    @media screen and (max-width: 820px) {
+                        width: 350px;
+                        height: 80px;
+                        align-items: center;
+                    }
+                    .errorMessage {
+                        margin-bottom: 0;
+                        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                        color: var(--Error);
+                        font-size: 12px;
+
+                        @media screen and (max-width: 1065px){
+                            font-size: 10px;
+                        }
+                        @media screen and (max-width: 820px) {
+                            width: 220px;
+                            font-size: 12px;
+                        }
+                    }
+                    input {
+                        width: 300px;
+                        height: 25px;
+                        margin-bottom: 0;
+                        border-radius: 8px;
+                        border: none;
+                        padding: 10px 10px 10px 20px;
+                        font-size: 20px;
+                        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                        color: var(--Elements);
+        
+                        @media screen and (max-width: 1065px){
+                            width: 200px;
+                            height: 15px;  
+                            font-size: 15px;
+                        }
+                    }
                 }
             }
             .loginBodyFieldsDown {
@@ -173,6 +217,12 @@
                     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                     font-size: 15px;
                     letter-spacing: 2px;
+
+                    @media screen and (max-width: 1065px){
+                        width: 150px;
+                        height: 28px;  
+                        font-size: 13px;
+                    }
 
                     @media screen and (max-width: 360px){
                         width: 170px;
