--- a/client/src/Registration/Registration.module.css
+++ b/client/src/Registration/Registration.module.css
@@ -7,6 +7,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    .loginError {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        color: var(--Error);
+        font-size: 25px;
+
+        @media screen and (max-width: 820px){
+            font-size: 20px;
+        }
+    }
     .loginBody {
         width: 70%;
         height: 70%;
@@ -176,13 +185,14 @@
                     flex-direction: row;
                     align-items: center;
                     gap: 10px;
+                    margin-top: 5px;
                     @media screen and (max-width: 727px){
                        justify-content: center;
                     }
                     span {
                         display: flex;
                         align-items: center;
-                        margin-top: 10px;
+                        margin-top: 4px;
                         color: var(--Elements);
 
                         @media screen and (max-width: 1300px) {
