--- a/client/src/Registration/Registration.module.css
+++ b/client/src/Registration/Registration.module.css
@@ -1,4 +1,4 @@
-.login {
+    .login {
     overflow: hidden;
     width: 100%;
     height: 100vh;
@@ -84,7 +84,7 @@
                     letter-spacing: 2px;
                     font-size: 30px;    
                 }
-            }
+            } 
             form {
                 width: 100%;
                 height: 100vh;
@@ -92,9 +92,10 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                margin-bottom: 20px;
 
                 @media screen and (max-width: 820px) {
-                    height: 50vh;
+                    height: 44vh;
                 }
                 .inputDiv {
                     width: 350px;
@@ -156,69 +157,6 @@
                     }   
                 }
             }
-            .loginBodyFieldsDown {
-                width: 55%;
-                height: auto;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 20px;
-
-                @media screen and (max-width: 1300px){
-                    width: 70%;
-                }
-                @media screen and (max-width: 1065px){
-                    width: 40%;
-                    align-items: center;
-                    justify-content: center;
-                    gap: 5px;
-                }
-                @media screen and (max-width: 1000px){
-                    width: 50%;
-                }
-                @media screen and (max-width: 820px){
-                    align-items: center;
-                    justify-content: center;
-                    gap: 5px;
-                }
-                @media screen and (max-width: 727px){
-                    width: 100%;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    gap: 5px;
-                }
-
-                .loginBodyFieldsDownRemember {
-                    width: 100%;
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    gap: 10px;
-                    margin-top: 5px;
-                    @media screen and (max-width: 727px){
-                       justify-content: center;
-                    }
-                    span {
-                        display: flex;
-                        align-items: center;
-                        margin-top: 4px;
-                        color: var(--Elements);
-
-                        @media screen and (max-width: 1300px) {
-                            font-size: 15px;    
-                        }
-                    }
-                }
-                .loginBodyRadio {
-                    width: 20px;
-                    cursor: pointer;
-
-                    @media screen and (max-width: 1300px) {
-                        width: 15px;    
-                    }
-                }
-            }
             .loginBodyButton {
                 width: 100%;
                 height: auto;
@@ -237,13 +175,14 @@
                     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                     font-size: 15px;
                     letter-spacing: 2px;
-
                     @media screen and (max-width: 1065px){
                         width: 150px;
                         height: 28px;  
                         font-size: 13px;
                     }
-
+                    @media screen and (max-width: 820px){
+                        margin-top: 30px;
+                    }
                     @media screen and (max-width: 360px){
                         width: 170px;
                         height: 30px;
@@ -282,4 +221,4 @@
             }
         }
     }
-};
+}
