--- a/client/src/Forgot/Forgot.module.css
+++ b/client/src/Forgot/Forgot.module.css
@@ -46,7 +46,7 @@
     }
     .forgotFields {
         width: 100%;
-        height: 50%;
+        height: 70%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -65,6 +65,15 @@
                 font-size: 30px;    
             }
         }
+        .forgotError {
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: var(--Error);
+            font-size: 25px;
+
+            @media screen and (max-width: 820px){
+                font-size: 20px;
+            }
+        }
         form {
             width: 100%;
             height: auto;
@@ -73,33 +82,70 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
-            input {
-                width: 300px;
-                height: 25px;
-                border-radius: 8px;
-                border: none;
-                margin-top: 20px;
-                padding: 10px 10px 10px 20px;
-                font-size: 20px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                color: var(--Elements);
-    
+            .inputDiv {
+                width: 350px;
+                height: 80px;
+                display: flex;
+                flex-direction: column;
+                align-items: stretch;
+                justify-content: flex-end;
+
                 @media screen and (max-width: 1065px){
-                    width: 200px;
-                    height: 15px;  
-                    font-size: 15px;
+                    width: 220px;
+                    height: 60px;   
                 }
+                @media screen and (max-width: 820px) {
+                    width: 350px;
+                    height: 80px;
+                    align-items: center;
+                }
+                .errorMessage {
+                    margin-bottom: 0;
+                    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                    color: var(--Error);
+                    font-size: 12px;
+
+                    @media screen and (max-width: 1065px){
+                        font-size: 10px;
+                    }
+                    @media screen and (max-width: 820px) {
+                        width: 220px;
+                        font-size: 12px;
+                    }
+                }
+                input {
+                    width: 300px;
+                    height: 25px;
+                    border-radius: 8px;
+                    border: none;
+                    padding: 10px 10px 10px 20px;
+                    font-size: 20px;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                    color: var(--Elements);
+        
+                    @media screen and (max-width: 1065px){
+                        width: 200px;
+                        height: 15px;  
+                        font-size: 15px;
+                    }
+                }
+                input:-webkit-autofill {
+                    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+                    -webkit-text-fill-color: var(--Elements) !important;
+                    color: var(--Elements) !important;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
+                    font-size: 20px;
+                    padding: 10px 10px 10px 20px !important;
+                    border-radius: 8px !important;
+                    transition: background-color 5000s ease-in-out 0s;
+
+                    @media screen and (max-width: 1065px){
+                        width: 200px;
+                        height: 15px;  
+                        font-size: 15px;
+                    }
+                }   
             }
-            input:-webkit-autofill {
-                -webkit-box-shadow: 0 0 0px 1000px white inset !important;
-                -webkit-text-fill-color: var(--Elements) !important;
-                color: var(--Elements) !important;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
-                font-size: 20px !important;
-                padding: 10px 10px 10px 20px !important;
-                border-radius: 8px !important;
-                transition: background-color 5000s ease-in-out 0s;
-            }   
             .forgotFieldsButton {
                 width: 100%;
                 height: auto;
