--- a/client/src/Forgot/Forgot.module.css
+++ b/client/src/Forgot/Forgot.module.css
@@ -65,6 +65,18 @@
                 font-size: 30px;    
             }
         }
+        .hiddenLoading {
+            display: none;
+        }
+        p {
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: white;
+            font-size: 25px;
+
+            @media screen and (max-width: 820px){
+                font-size: 20px;
+            }
+        }
         .forgotError {
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             color: var(--Error);
