--- a/client/src/Tasks/TasksHeader.module.css
+++ b/client/src/Tasks/TasksHeader.module.css
@@ -18,13 +18,39 @@
     }
     .headerBodySettingIcon {
         width: 50%;
+        height: auto;
         display: flex;
-        justify-content: flex-end;
-        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        position: relative;
         margin-right: 50px;
         color: var(--Elements);
         .hiddenSettingMenu {
             display: none;
+        }
+        .settingMenu {  
+            width: 250px;
+            height: 150px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            .settingMenuGmail {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                color: var(--SecondaryEl);
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            }
+            .settingSmallIcon {
+                display: flex;
+                align-items: center;
+                color: var(--SecondaryEl);
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                gap: 10px;
+            }
         }
     }
 }
