--- a/client/src/Tasks/TasksHeader.module.css
+++ b/client/src/Tasks/TasksHeader.module.css
@@ -15,7 +15,16 @@
         justify-content: flex-start;
         align-items: center;
         margin-left: 50px;
+        
+        @media screen and (max-width: 431px) {
+            font-size: 25px;
+            margin-left: 30px;
+        }
+        @media screen and (max-width: 377px) {
+            margin-left: 20px;
+        }
     }
+
     .headerBodySettingIcon {
         width: 50%;
         height: auto;
@@ -26,17 +35,59 @@
         position: relative;
         margin-right: 50px;
         color: var(--Elements);
+   
+        @media screen and (max-width: 431px) {
+            margin-right: 30px;
+        }
+        @media screen and (max-width: 377px) {
+            margin-right: 20px;
+        }
+
+        .setting {
+            width: 25px;
+            height: 25px;
+            cursor: pointer;
+            position: absolute;
+        }
         .hiddenSettingMenu {
-            display: none;
+            opacity: 0;
+            visibility: hidden;
+            transform: translateX(10px);
         }
         .settingMenu {  
-            width: 250px;
-            height: 150px;
+            width: 300px;
+            height: 200px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            background-color: var(--Background);
+            border-radius: 0 0 0 20px;
             position: absolute;
+            top: 100%;
+            right: -10%;
+            opacity: 1;
+            visibility: visible;
+            transform: translateX(0);
+            transition: opacity 0.4s, transform 0.4s ease-in-out;
+            cursor: pointer;
+
+            @media screen and (max-width: 1093px) {
+                right: -15%;
+            };
+            @media screen and (max-width: 763px) {
+                width: 280px;
+                right: -20%;
+            };
+            @media screen and (max-width: 596px) {
+                width: 250px;
+                right: -30%;
+            };
+            @media screen and (max-width: 431px) {
+                width: 220px;
+                right: -20%;
+            }
+
             .settingMenuGmail {
                 display: flex;
                 flex-direction: column;
@@ -50,6 +101,9 @@
                 color: var(--SecondaryEl);
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 gap: 10px;
+            }
+            .settingSmallIcon:hover {
+                color: var(--Elements);
             }
         }
     }
