--- a/client/src/Tasks/TasksHeader/TasksHeader.module.css
+++ b/client/src/Tasks/TasksHeader/TasksHeader.module.css
@@ -6,6 +6,61 @@
     position: fixed;
     top: 0;
     z-index: 1000;
+
+    .hiddenPanel {
+        display: none;
+    }
+    .panelIsOpen {
+        width: 100%;   
+        height: 100vh;
+        display: grid;
+        grid-template-areas: 
+            'top top'
+            'left right';
+        grid-template-columns: auto auto;   
+        grid-template-rows: 20% 0;         
+        align-items: center;
+        justify-content: center;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        position: fixed;
+        background-color: rgba(0, 0, 0, 0.829); 
+
+        span {
+            grid-area: top;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: var(--SecondaryEl);
+            font-size: 25px;
+
+            @media screen and (max-width: 400px){
+                font-size: 20px;
+            }
+        }
+
+        .btn {
+            width: 80px;
+            height: 25px;
+            border-radius: 8px;
+            border: none;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            cursor: pointer;
+            margin-left: 35px;
+
+             @media screen and (max-width: 400px){
+                margin-left: 25px;
+            }
+        }
+        .btn1 {
+            grid-area: left;
+            background-color: white;
+        }
+        .btn2 {
+            grid-area: right;
+            background-color: var(--SecondaryEl);
+        }
+    } 
+
     h2 {
         width: 50%;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
